k8s/secret-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-test
  namespace: sonarsniffer
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
      volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets"
  volumes:
    - name: secrets-store
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "sonarsniffer-kv-spc"
